<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pubnotes</string>
    <string name="title_activity_article_list">Search Results</string>
    <string name="title_activity_article_detail">Article Detail</string>
    <string name="title_activity_articles_downloaded">My Downloads</string>
    <string name="title_activity_evaluation_article_detail">Evaluation Details</string>
    <string name="menu_search">Search</string>
    <string name="menu_my_downloads">Downloads</string>
    <string name="action_settings">Settings</string>
    <string name="contextual_menu_share">Share</string>
    <string name="contextual_menu_recommend">Recommend to friends</string>
    <string name="contextual_menu_delete">Delete</string>
    <string name="contextual_menu_download">Get this article</string>
    <string name="contextual_menu_view">View details</string>
    <string name="title_activity_article_evaluation">ArticleEvaluationActivity</string>
    <string name="article_evaluation">Article Evaluation</string>
    <string name="innovation">Innovation</string>
    <string name="write">Write</string>
    <string name="relevance">Relevance</string>
    <string name="comments">Comments</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation_of_deletion">Confirmation of deletion</string>
    <string name="do_you_really_want_to">Do you really want to %s?</string>
    <string name="article_removed">Article %s was removed</string>
    <string name="external_storage_unavailable">External storage is unavailable</string>
    <string name="check_media_availability">Check media availability</string>
    <string name="download_complete">Download complete! Click to view the article</string>
    <string name="cant_remove_article">Unable to remove the article.</string>
    <string name="evaluation_originality">Originality</string>
    <string name="evalution_contribution">Contribution</string>
    <string name="evaluation_readability">Readability</string>
    <string name="evalution_relatedWorks">Related works</string>
    <string name="evalution_reviewerFamiliarity">Your familiarity with this subject</string>
    <string name="evalution_overall">Overall</string>
    <string name="title_activity_register">Register on Pubnotes</string>
    <string name="title_activity_article_search">Search Article</string>
	<string name="title">Title</string>
	<string name="author">Author</string>
	<string name="search">Search</string>
    <string name="libraries">Libraries</string>
 	<string name="title_activity_menu">Application Menu</string>
    <string name="title_activity_search_people">Search People</string>
    <string name="title_activity_show_profile">My Profile</string>
    <string name="title_activity_edit_profile">Edit My Profile</string>
    <string name="title_activity_show_friends">Show Friends</string>
    <string name="spinner_title2">Add tag +</string>
    <string name="spinner_title">Search Articles on Pubnotes</string>
    <string name="searching">Searching</string>
    <string name="evaluate">Evaluate</string>
    <string name="title_recommendation">Recommendation</string>
    <string name="title_friends">Friends</string>
    <string name="article_recommendation">Article recommendation</string>
    <string name="authors_recommend">Authors</string>
    <string name="article_link_recommend">Article link</string>
    <string name="recommend">Recommend</string>
    <string name="conference_recommend">Conference</string>
    <string name="article_recommend">Article</string>
    <string name="obs">Obs</string>
    <string name="send">Send</string>
    <string name="actions_dialog">What do you want to do?</string>
</resources>