<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

      <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
    
      <TextView
          android:id="@+id/textRecArticle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/article_recommendation"
          android:textSize="20sp" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/article_recommend" />

      <EditText
          android:id="@+id/editTextTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:enabled="false"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:inputType="none" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/authors_recommend" />

      <EditText
          android:id="@+id/editTextAuthor"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:enabled="false"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:inputType="none" >

          <requestFocus />
      </EditText>

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/conference_recommend" />

      <EditText
          android:id="@+id/editTextConference"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:enabled="false"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:inputType="none" />

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/article_link_recommend" />

      <EditText
          android:id="@+id/editTextArticle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:enabled="false"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:inputType="none" />

      <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/obs" />

      <EditText
          android:id="@+id/editTextObs"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textMultiLine"
          android:lines="3" />
      
       <Button
           android:id="@+id/buttonRecommend"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/recommend" />

</LinearLayout>
    
</ScrollView>